Review the test run classes, and hold the tree to the IDE's warnings
The test run classes were read end to end for structure, naming and
redundancy. ValueExtractor is gone. The failure dialog and its fields moved
from testrun/create to testrun/failure. RunStatusService records a verdict
and refreshes the open run itself, so no caller has to remember the second
step, and TestRunStatusChange owns what a status change does to a run.

Then every warning IntelliJ shows in what this repository writes was listed
and worked down, and the rules the warnings came from are gated:

- tools/inspect.ps1 runs over the whole project and keeps what the new
  .idea/scopes/Inspected.xml names: the plugin, both content modules, the
  tests, the docs, the skills, the workflows, the tools, the four Gradle
  scripts and the root Markdown. -scope and idea.analyze.scope both failed
  headless, and "-d src/main" left the tests, the modules and every Markdown
  file unread.
- The gate names nineteen rules, each switched on in the Testin profile so
  it does not depend on a default. Convert2MethodRef, CodeBlock2Expr,
  SimplifyStreamApiCallChains, StringBufferReplaceableByString,
  SameParameterValue, BooleanMethodIsAlwaysInverted, UnusedReturnValue,
  UNUSED_IMPORT, OnDemandImport and ConvertToStringTemplate join
  DataFlowIssue and ReturnNull; HtmlParagraphInMarkdown joins the script's
  own six.
- gradle.properties turns Kotlin script warnings into errors, so a
  deprecated call in a .gradle.kts fails every build. The headless inspector
  cannot see those, because it never loads the scripts' Gradle classpath.
  runPyCharm is configured through tasks.named, like runIde, because the IDE
  read the plugin's task { } as the deprecated Project.task(String).
- The project uses its committed code style. codeStyleConfig.xml said
  Default, so Project.xml was never read. The scheme writes no star imports,
  keeps the blank lines in the bundles, does not wrap record components, and
  leaves alone the